# cherry-bomb

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/superpowers/specs/: 2026-03-27-sre-ai-agent-design.md
infra/docker/: Dockerfile  docker-compose.yml
src/cherry_bomb/: __init__.py  __main__.py  config.py  main.py
src/cherry_bomb/agent/: orchestrator.py  prompts.py  tool_router.py
src/cherry_bomb/decision/: store.py
src/cherry_bomb/interfaces/cli/: app.py
src/cherry_bomb/interfaces/mcp/: run.py  server.py
src/cherry_bomb/interfaces/slack/: handler.py
src/cherry_bomb/models/: schemas.py
src/cherry_bomb/plugins/: base.py  registry.py
src/cherry_bomb/plugins/builtin/: datadog.py  decision.py
tests/unit/: test_datadog_plugin.py  test_decision_models.py  test_decision_plugin.py  test_decision_store.py  test_main.py  test_mcp_server.py  test_orchestrator.py  test_plugin_base.py  test_prompts.py  test_registry.py  test_schemas.py  test_slack_handler.py  test_tool_router.py
